force-app/main/default/objects/Product__c/fields/Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_Number__c</fullName>
    <description>Product identification</description>
    <label>Model Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>