force-app/main/default/objects/Product__c/fields/Product_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Display_Name__c</fullName>
    <label>Product Display Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>