force-app/main/default/objects/Product__c/fields/Warranty_Term__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Term__c</fullName>
    <label>Warranty Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>