force-app/main/default/objects/Product__c/validationRules/VR_Product_Registration_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Product_Registration_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Registration_Date__c &lt; Purchase_Date__c</errorConditionFormula>
    <errorMessage>Registration Date cannot be earlier than Purchase Date.</errorMessage>
</ValidationRule>