force-app/main/default/objects/Product__c/validationRules/VR_Product_WarrantyTermsCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Product_WarrantyTermsCheck</fullName>
    <active>true</active>
    <description>Enforces that the standard warranty length falls within the bounded logical range between 1 and 120 months.</description>
    <errorConditionFormula>OR(Warranty_Term__c&lt;=0,Warranty_Term__c&gt;120)</errorConditionFormula>
    <errorDisplayField>Warranty_Term__c</errorDisplayField>
    <errorMessage>The Standard Warranty Length must be a positive integer between 1 and 120 months (10 years).</errorMessage>
</ValidationRule>